

syntax = "proto3";
//import "google/protobuf/any.proto";

package starstart.cgw.gamectrl.pbgens;
	

enum PBModule{
	CGC = 0;
};


enum PBCommand{
	CUR = 0 ;//当前期号
	FLS = 1 ;//根据参数生成期号流程
	ISG = 2;//生成游戏奖期
	SRA = 100 ;//流程控制器
};

message PBIssueFlowGen
{
	message PBIFlowStep{
		string ltype = 2;//游戏类型
		string gs_ecode = 3;//状态简称，英文
		string gs_chcode = 4;//状态简称，中文
		string gs_desc = 5;//状态描述，中文
		int32 timesec_offset = 6; //以秒为单位的偏移
		string gs_order = 7; //英文数字编号
		string next_orders = 8;//下一个状态列表,逗号","分开
		string status = 9; //当前状态
	}
	string ltype = 1  ;//游戏类型
	repeated PBIFlowStep steps = 2; //状态的节点
	string override_exists = 3;//是否覆盖当前的
	string 	reload_type = 4 ;//重新加载类型,1:从资源文件里面，从数据库	
} 
message PBIssueFlowInit{
	repeated PBIssueFlowGen  flows = 1;//
}

message PBRetCtrl
{
	string retcode = 1; //返回状态码，000000，表示成功
	string retmsg = 2;//返回消息
	//Any data = 3;//返回的数据
};

message PBRetIssueFlowGen 
{
	string retcode = 1; //返回状态码，000000，表示成功
	string retmsg = 2;//返回消息
	message IssueFlow{
		string ltype = 1;//游戏类型
		uint32 steps_count = 100;//插入的步骤总数	
	}
	
	IssueFlow flows = 3;//游戏列表
	
}



message PBIssue{
	string ltype = 2;//游戏类型
	string issue_no =3;//奖期编号
	string lottery_no = 4;//开奖号码
	string issue_date = 5;//日期：YYYYMMDD
	string pre_stime = 6;//预期开始时间
	string pre_etime = 7;//预期结束时间
	string sale_stime = 8;//销售开始时间
	string sale_etime = 9;//销售结束时间
	string real_stime = 10;//实际开始时间
	string real_etime = 11;//实际结束时间
	string cancel_ltime = 12;//最后可撤单时间
	string create_time = 19;//创建时间
	string modify_time = 20;//最后修改时间
	string issue_status = 21;//游戏状态
	
	
}

message PBIssueGen
{
	string ltype = 1  ;//游戏类型
	string override_exists = 3;//是否覆盖当前的
	repeated string days = 4 ;//奖期的日期
	int32	offset = 5;//从第几期开始
	int32	limit = 6;//个数限制，0表示无限制
	
}
	
message PBRetIssueGen
{
	string retcode = 1; //返回状态码，000000，表示成功
	string retmsg = 2;//返回消息
	PBIssueGen request=100;
	
	repeated PBIssue issues = 101;//奖期列表 
}



